[package]
name = "iroh-ping"
version = "0.1.0"
edition = "2024"
description = "high level PING-PONG iroh protocol"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ping"
keywords = ["iroh", "protocol"]

[dependencies]
anyhow = "1.0.98"
iroh = "0.35.0"
iroh-metrics = "0.34.0"
n0-future = "0.1.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
